# mmng

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  gdb.sh  vcpkg.json
.github/workflows/: build.yml
certs/: certificate.sh  mmng.crt  mmng.csr  mmng.key
src/: main.cc  main.cpp  master.h  parameter.h  server.cc  server.h  slave-info.h  slave.h  soem-master.h  soem-slave.h  soem.cc  soem.h
subprojects/loguru/: CMakeLists.txt
